kind/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system1
  labels:
    name: system1
    environment: development
